@@ -1,4 +1,6 @@
 const PATCH_NOTES = 
+	'2022/02/21\n' +
+	'• Slash command support for praise and shame.\n' +
 	'2022/02/19\n' +
 	'• Slash command support for generating memes.\n' +
 	'• Emoji report can be ordered by most recent or most popular.\n' +
