@@ -1,3 +1,5 @@
+2022/02/21
+• Slash command support for praise and shame.
 2022/02/19
 • Slash command support for generating memes.
 • Emoji report can be ordered by most recent or most popular.
